--- a/Jannesen.FileFormat.Json.csproj
+++ b/Jannesen.FileFormat.Json.csproj
@@ -50,7 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Jannesen.FileFormat.Json.snk" />
-    <None Include="LICENSE" />
+    <None Include="LICENSE.txt" />
     <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
