--- a/Jannesen.FileFormat.Json.csproj
+++ b/Jannesen.FileFormat.Json.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>Jannesen.FileFormat.Json</RootNamespace>
     <AssemblyName>Jannesen.FileFormat.Json</AssemblyName>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net46;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net48</TargetFrameworks>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <SignAssembly>true</SignAssembly>
@@ -13,6 +13,7 @@
     <Version>1.10.00.000</Version>
     <RepositoryUrl>https://github.com/jannesen/Jannesen.FileFormat.Json</RepositoryUrl>
     <Authors>Peter Jannesen</Authors>
+    <AutoGenerateBindingRedirects>False</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
