--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,19 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
+[*.cs]
+# IDE1006: Naming Styles
+dotnet_diagnostic.IDE1006.severity = none
+
+# CA1014: Mark assemblies with CLSCompliant
+dotnet_diagnostic.CA1014.severity = none
+
+# CA1032: Implement standard exception constructors
+dotnet_diagnostic.CA1032.severity = none
+
+# CA1508: Avoid dead conditional code. False positive
+dotnet_diagnostic.CA1508.severity = none
+
+# CA2201: Do not raise reserved exception types
+dotnet_diagnostic.CA2201.severity = none
+
