--- a/.editorconfig
+++ b/.editorconfig
@@ -20,6 +20,9 @@ dotnet_diagnostic.CA1032.severity = none
 # CA1508: Avoid dead conditional code. False positive
 dotnet_diagnostic.CA1508.severity = none
 
+# CA1510: Use 'ArgumentNullException.ThrowIfNull' instead of explicitly throwing a new exception instance
+dotnet_diagnostic.CA1510.severity = silent
+
 # CA2201: Do not raise reserved exception types
 dotnet_diagnostic.CA2201.severity = none
 
