--- a/.editorconfig
+++ b/.editorconfig
@@ -8,21 +8,25 @@ indent_size = 4
 trim_trailing_whitespace = true
 
 [*.cs]
+
+# Use collection initializers or expressions
+dotnet_diagnostic.IDE0028.severity = none
+
+# Use range operator
+dotnet_diagnostic.IDE0057.severity = none
+
+# Use switch expression
+dotnet_diagnostic.IDE0066.severity = none
+
+# Simplify new expression
+dotnet_diagnostic.IDE0090.severity = none
+
+# Use primary constructor (IDE0290)
+dotnet_diagnostic.IDE0290.severity = none
+
 # IDE1006: Naming Styles
 dotnet_diagnostic.IDE1006.severity = none
 
-# CA1014: Mark assemblies with CLSCompliant
-dotnet_diagnostic.CA1014.severity = none
-
 # CA1032: Implement standard exception constructors
 dotnet_diagnostic.CA1032.severity = none
-
-# CA1508: Avoid dead conditional code. False positive
-dotnet_diagnostic.CA1508.severity = none
-
-# CA1510: Use 'ArgumentNullException.ThrowIfNull' instead of explicitly throwing a new exception instance
-dotnet_diagnostic.CA1510.severity = silent
-
-# CA2201: Do not raise reserved exception types
-dotnet_diagnostic.CA2201.severity = none
 
