--- a/Jannesen.FileFormat.Json.csproj
+++ b/Jannesen.FileFormat.Json.csproj
@@ -1,36 +1,48 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <RootNamespace>Jannesen.FileFormat.Json</RootNamespace>
-    <AssemblyName>Jannesen.FileFormat.Json</AssemblyName>
-    <OutputType>Library</OutputType>
-    <TargetFrameworks>net48;net6.0</TargetFrameworks>
-    <AutoGenerateBindingRedirects>False</AutoGenerateBindingRedirects>
-    <EnableNETAnalyzers>true</EnableNETAnalyzers>
-    <AnalysisLevel>latest</AnalysisLevel>
-    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-    <WarningLevel>4</WarningLevel>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>Jannesen.FileFormat.Json.snk</AssemblyOriginatorKeyFile>
-    <Company>Jannesen B.V.</Company>
-    <Version>1.10.00.001</Version>
-    <RepositoryUrl>https://github.com/jannesen/Jannesen.FileFormat.Json</RepositoryUrl>
-    <Authors>Peter Jannesen</Authors>
-  </PropertyGroup>
+    <PropertyGroup>
+        <RootNamespace>Jannesen.FileFormat.Json</RootNamespace>
+        <AssemblyName>Jannesen.FileFormat.Json</AssemblyName>
+        
+        <OutputType>Library</OutputType>
+        <TargetFramework>net8.0</TargetFramework>
+        <InvariantGlobalization>true</InvariantGlobalization>
+        <Platforms>AnyCPU</Platforms>
+  
+        <Nullable>enable</Nullable>
+        
+        <IsTrimmable>True</IsTrimmable>
+        <IsAotCompatible>True</IsAotCompatible>        
+        <SignAssembly>True</SignAssembly>
+        <AssemblyOriginatorKeyFile>Jannesen.FileFormat.Json.snk</AssemblyOriginatorKeyFile>
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <AutoGenerateBindingRedirects>False</AutoGenerateBindingRedirects>
+        
+        <Company>Jannesen B.V.</Company>
+        <Version>1.10.00.001</Version>
+        <Authors>Peter Jannesen</Authors>
+        <RepositoryUrl>https://github.com/jannesen/Jannesen.FileFormat.Json</RepositoryUrl>
+    </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-  </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <EnableNETAnalyzers>true</EnableNETAnalyzers>
+        <AnalysisLevel>latest</AnalysisLevel>
+        <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+        <WarningLevel>4</WarningLevel>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-  </PropertyGroup>
-
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+        <DebugSymbols>true</DebugSymbols>
+        <DebugType>full</DebugType>
+        <Optimize>false</Optimize>
+        <OutputPath>bin\Debug</OutputPath>
+        <DefineConstants>DEBUG;TRACE</DefineConstants>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <DebugType>pdbonly</DebugType>
+        <Optimize>true</Optimize>
+        <OutputPath>bin\Release</OutputPath>
+        <DefineConstants>TRACE</DefineConstants>
+    </PropertyGroup>
 </Project>
