--- a/.editorconfig
+++ b/.editorconfig
@@ -15,6 +15,9 @@ dotnet_diagnostic.IDE0028.severity = none
 # Use range operator
 dotnet_diagnostic.IDE0057.severity = none
 
+# Use simple 'using' statement
+dotnet_diagnostic.IDE0063.severity = none
+
 # Use switch expression
 dotnet_diagnostic.IDE0066.severity = none
 
@@ -30,3 +33,24 @@ dotnet_diagnostic.IDE1006.severity = none
 # CA1032: Implement standard exception constructors
 dotnet_diagnostic.CA1032.severity = none
 
+dotnet_diagnostic.IDE0017.severity = error
+dotnet_diagnostic.IDE0029.severity = error
+dotnet_diagnostic.IDE0030.severity = error
+dotnet_diagnostic.IDE0031.severity = error
+dotnet_diagnostic.IDE0044.severity = error
+dotnet_diagnostic.IDE0051.severity = error
+dotnet_diagnostic.IDE0075.severity = error
+dotnet_diagnostic.IDE0083.severity = error
+dotnet_diagnostic.IDE0230.severity = error
+dotnet_diagnostic.IDE0250.severity = error
+dotnet_diagnostic.IDE0251.severity = error
+dotnet_diagnostic.IDE0270.severity = error
+dotnet_diagnostic.IDE0300.severity = error
+dotnet_diagnostic.IDE0301.severity = error
+dotnet_diagnostic.IDE1005.severity = error
+
+# IDE0007: Use explicit type
+dotnet_diagnostic.IDE0007.severity = warning
+csharp_style_var_for_built_in_types =  true:suggestion
+csharp_style_var_when_type_is_apparent = true:suggestion
+csharp_style_var_elsewhere = true:suggestion
