--- a/.editorconfig
+++ b/.editorconfig
@@ -17,6 +17,9 @@ dotnet_diagnostic.CA1014.severity = none
 # CA1032: Implement standard exception constructors
 dotnet_diagnostic.CA1032.severity = none
 
+# CA1062: Validate arguments of public methods
+dotnet_diagnostic.CA1062.severity = none
+
 # CA1508: Avoid dead conditional code. False positive
 dotnet_diagnostic.CA1508.severity = none
 
