--- a/.editorconfig
+++ b/.editorconfig
@@ -29,3 +29,5 @@ dotnet_diagnostic.CA1510.severity = silent
 # CA2201: Do not raise reserved exception types
 dotnet_diagnostic.CA2201.severity = none
 
+# CA2237: Mark ISerializable types with SerializableAttribute
+dotnet_diagnostic.CA2237.severity = none
