--- a/Jannesen.FileFormat.Json.csproj
+++ b/Jannesen.FileFormat.Json.csproj
@@ -2,23 +2,23 @@
     <PropertyGroup>
         <RootNamespace>Jannesen.FileFormat.Json</RootNamespace>
         <AssemblyName>Jannesen.FileFormat.Json</AssemblyName>
-        
+
         <OutputType>Library</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <InvariantGlobalization>true</InvariantGlobalization>
         <Platforms>AnyCPU</Platforms>
-  
+
         <Nullable>enable</Nullable>
-        
+
         <IsTrimmable>True</IsTrimmable>
-        <IsAotCompatible>True</IsAotCompatible>        
+        <IsAotCompatible>True</IsAotCompatible>
         <SignAssembly>True</SignAssembly>
         <AssemblyOriginatorKeyFile>Jannesen.FileFormat.Json.snk</AssemblyOriginatorKeyFile>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <AutoGenerateBindingRedirects>False</AutoGenerateBindingRedirects>
-        
+
         <Company>Jannesen B.V.</Company>
-        <Version>1.10.00.001</Version>
+        <Version>1.11.00.000</Version>
         <Authors>Peter Jannesen</Authors>
         <RepositoryUrl>https://github.com/jannesen/Jannesen.FileFormat.Json</RepositoryUrl>
     </PropertyGroup>
@@ -46,4 +46,8 @@
         <OutputPath>bin\Release</OutputPath>
         <DefineConstants>TRACE</DefineConstants>
     </PropertyGroup>
+    <ItemGroup>
+      <None Remove=".git" />
+    </ItemGroup>
+
 </Project>
